sandstone-miner: 1.2 - add humidify casting when waterskin charges at 0 (requires lunar spellbook, runes, and setting enabled - see README.md)